# ARIDXTwelve

./: .clang-format  CMakeLists.txt  CMakeSettings.json
blendersources/: untitled.blend  untitled.blend1
resources/embed/: Primary3DPS.h  Primary3DVS.h  World1.h
resources/shaders/: Primary3D.ps.hlsl  Primary3D.vs.hlsl
scripts/: operator_file_export.py
src/Windows/: COMPtr.h  MinCRT.cc  Win.h
src/embed/: resources.h
src/engine/: Array.h  Common.h  GlobalWindowData.h  Log.cc  Log.h  Math.h  Memory.cc  Memory.h  Mutex.h  Object.h  VertexTypes.h  main.cc
src/engine/Entity/: Entity.cc  Entity.h
src/engine/Entity/Component/: BaseD3DRIRendererComponent.h  BasePhysicsComponent.cc  BasePhysicsComponent.h  BoundingBoxComponent.cc  BoundingBoxComponent.h  CameraComponent.cc  CameraComponent.h  Component.h  StaticMeshD3DRIRendererComponent.cc  StaticMeshD3DRIRendererComponent.h
src/engine/World/: World.cc  World.h  World1.cc  World1.h  WorldManager.h
src/engine/renderer/: D3DRI.cc  D3DRI.h  D3DRIRenderFrameContext.cc  D3DRIResource.cc  D3DRIResource.h  D3DRIResourceManager.cc  D3DRIResourceManager.h
